Changes with SettingsActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
         <activity android:name=".IntroActivity"/>
         <activity android:name=".SettingsActivity"/>
+        <activity android:name=".SettingsActivity2"/>
     </application>
 
 </manifest>
