--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
 
     implementation "androidx.activity:activity-ktx:1.7.2"
 
+    implementation "com.google.android.material:material:1.9.0"
+
 }
 
 apply plugin: 'com.google.gms.google-services'
