--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ android {
     viewBinding {
         enabled = true
     }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.4.5'
+    }
 }
 
 dependencies {
@@ -65,6 +68,22 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.7.2"
 
     implementation "com.google.android.material:material:1.9.0"
+
+    implementation "androidx.compose.runtime:runtime:1.5.0"
+    implementation "androidx.compose.ui:ui:1.5.0"
+
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.activity:activity-compose:1.7.2'
+    implementation platform('androidx.compose:compose-bom:2022.10.00')
+    implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.ui:ui-graphics'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.compose.material3:material3:1.1.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+    debugImplementation 'androidx.compose.ui:ui-tooling'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
 }
 
