--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,13 +37,10 @@ android {
     viewBinding {
         enabled = true
     }
-    composeOptions {
-        kotlinCompilerExtensionVersion '1.4.5'
-    }
+
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
@@ -56,35 +53,12 @@ dependencies {
     implementation 'com.github.AppIntro:AppIntro:6.2.0'
 
     implementation 'com.google.firebase:firebase-auth-ktx:22.1.1'
-
-    implementation(platform("com.google.firebase:firebase-bom:32.2.0"))
+    implementation platform("com.google.firebase:firebase-bom:32.2.0")
     implementation("com.google.firebase:firebase-auth-ktx")
     implementation("com.google.android.gms:play-services-auth:20.6.0")
-
-    implementation 'androidx.compose.material3:material3:1.1.1'
-
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
-    implementation "androidx.activity:activity-ktx:1.7.2"
-
-    implementation "com.google.android.material:material:1.9.0"
-
-    implementation "androidx.compose.runtime:runtime:1.5.0"
-    implementation "androidx.compose.ui:ui:1.5.0"
-
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.7.2'
-    implementation platform('androidx.compose:compose-bom:2022.10.00')
-    implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3:1.1.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
-
 }
+
 
 apply plugin: 'com.google.gms.google-services'
