--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.aid098.carrepair"
-        minSdk 24
+        minSdk 25
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -51,6 +51,12 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation 'com.github.AppIntro:AppIntro:6.2.0'
+    implementation 'androidx.compose.material3:material3:1.1.1'
+    implementation 'androidx.compose.material3:material3-android:1.2.0-alpha05'
+    implementation 'androidx.compose.material3:material3-window-size-class-android:1.2.0-alpha05'
+    implementation 'androidx.compose.material3:material3-window-size-class:1.1.1'
+    implementation 'androidx.glance:glance-material3:1.0.0-rc01'
+    implementation 'androidx.wear.compose:compose-material3:1.0.0-alpha09'
 
     implementation 'com.google.firebase:firebase-auth-ktx:22.1.1'
     implementation platform("com.google.firebase:firebase-bom:32.2.0")
