--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -23,7 +24,7 @@
         </activity>
         <activity android:name=".IntroActivity"/>
         <activity android:name=".SettingsActivity"/>
-        <activity android:name=".SettingsActivity2"/>
+        <activity android:name=".SettingsActivity"/>
     </application>
 
 </manifest>
