--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,17 +52,19 @@ dependencies {
 
     implementation 'com.github.AppIntro:AppIntro:6.2.0'
     implementation 'androidx.compose.material3:material3:1.1.1'
-    implementation 'androidx.compose.material3:material3-android:1.2.0-alpha05'
-    implementation 'androidx.compose.material3:material3-window-size-class-android:1.2.0-alpha05'
+    implementation 'androidx.compose.material3:material3-android:1.2.0-alpha06'
+    implementation 'androidx.compose.material3:material3-window-size-class-android:1.2.0-alpha06'
     implementation 'androidx.compose.material3:material3-window-size-class:1.1.1'
     implementation 'androidx.glance:glance-material3:1.0.0-rc01'
-    implementation 'androidx.wear.compose:compose-material3:1.0.0-alpha09'
+    implementation 'androidx.wear.compose:compose-material3:1.0.0-alpha10'
 
     implementation 'com.google.firebase:firebase-auth-ktx:22.1.1'
     implementation platform("com.google.firebase:firebase-bom:32.2.0")
     implementation("com.google.firebase:firebase-auth-ktx")
     implementation("com.google.android.gms:play-services-auth:20.6.0")
     implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    implementation 'com.google.code.gson:gson:2.8.9'
 
 }
 
